<resources>
    <string name="app_name">SmoonOS</string>
    <string name="wifi_remembered">Saved</string>
    <string name="isconnected">(Connected)</string>
    <string name="wifi_disabled_password_failure">Authentication problem</string>
    <string name="wifi_disabled_network_failure">IP configuration failure</string>
    <string name="wifi_disabled_generic">Disabled</string>
    <string name="strong">Strong</string>
    <string name="general">General</string>
    <string name="weak">Weak</string>
    <string name="signalstrength">Signal strength:</string>
    <string name="security">Security:</string>
    <string name="stateinfo">State info:</string>
    <string name="wifiipaddress">IP address:</string>
    <string name="wifistate">Connected</string>
    <string name="forget">Forget</string>
    <string name="link">Connect</string>
    <string name="stop">Disconnect</string>
    <string name="wifi_ssid">Network SSID</string>
    <string name="wifi_security">Security</string>
    <string name="wifi_password">Password</string>
    <string name="wifi_show_password">Show password</string>
    <string name="wpa_psk">WPA_PSK</string>
    <string name="wpa2_psk">WPA2_PSK</string>
    <string name="wpa_eap">WPA_EAP</string>
    <string name="wep">WEP</string>
    <string name="ssidmsg">Network SSID cannot be empty!</string>
    <string name="passwordmsg">Password cannot be empty!</string>
    <string name="none">None</string>
    <string name="passwordmessage">Sorry, the password you entered is too short, please try again!</string>
    <string name="enter">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="hide_password">Hide password</string>
    <string name="isconnect">The wifi you selected has no password, it may be insecure, are you sure to connect?</string>
    <string name="Authentication_error">Authentication error on current wifi, connection failed</string>
    <string name="pairing">Pairing...</string>
    <string name="paired">Paired</string>
    <string name="unpaired">Unpaired</string>
    <string name="connecting">Connecting...</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="not_connected">Not connected</string>
    <string name="disconnecting">Disconnecting...</string>
    <string name="developer_open_hint">Developer mode is on</string>
    <string name="memory_info">%1$s (available) / %2$s (total)</string>
    <string name="project_mode_1">Front Projection</string>
    <string name="project_mode_2">Rear Projection</string>
    <string name="project_mode_3">Ceiling Front Projection</string>
    <string name="project_mode_4">Ceiling Rear Projection</string>
    <string name="reset_keystore">Reset keystone correction?</string>
    <string name="day_am">AM</string>
    <string name="day_pm">PM</string>
    <string name="hour12">1:00 | PM</string>
    <string name="hour24">13:00</string>
    <string name="auto_time_hint">Automatic time is being used, manual modification is not allowed</string>
    <string name="fine_minutes">Five minutes</string>
    <string name="ten_minutes">Ten minutes</string>
    <string name="twenty_minutes">Twenty minutes</string>
    <string name="an_hour">One hour</string>
    <string name="two_hours">Two hours</string>
    <string name="three_hours">Three hours</string>
    <string name="off">Off</string>
    <string name="reset_factory_msg">Initialize user actions, application settings, and system settings.</string>
    <string name="short_max_tips">Shortcut applications are full</string>
    <string name="resident_app">Fixed shortcut application, cannot be deleted.</string>
    <string name="about_device">About</string>
    <string name="device_model">Device model</string>
    <string name="ui_version">UI version</string>
    <string name="android_version">Android version</string>
    <string name="memory">Memory</string>
    <string name="storage">Storage</string>
    <string name="wired_mac">Wired MAC</string>
    <string name="wireless_mac">Wireless MAC</string>
    <string name="update_firmware">Local upgrade</string>
    <string name="all_apps">All applications</string>
    <string name="app_manager_settings">Application settings</string>
    <string name="bluetooth">Bluetooth Settings</string>
    <string name="bluetooth_switch">Bluetooth switch</string>
    <string name="search_bluetooth">Search for Bluetooth devices</string>
    <string name="paired_devices">Paired devices</string>
    <string name="available_devices">Available devices</string>
    <string name="date_time_settings">Date and time settings</string>
    <string name="auto_time">Automatic time</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="timezone">Time zone</string>
    <string name="time_format">Use 24-hour format</string>
    <string name="language_keyboard">Language and keyboard</string>
    <string name="language_setting">Language Settings</string>
    <string name="inputmethod">Input method</string>
    <string name="inputmethod_setting">Input method Settings</string>
    <string name="shortcut_editor">Shortcut editor</string>
    <string name="wallpaper_setting">Wallpaper settings</string>
    <string name="usb">USB</string>
    <string name="av">AV</string>
    <string name="hdmi">HDMI</string>
    <string name="hdmi2">HDMI2</string>
    <string name="vga">VGA</string>
    <string name="apps">My applications</string>
    <string name="google">APP Store</string>
    <string name="settings">Settings</string>
    <string name="projection_settings">Projection Settings</string>
    <string name="projection">Projection</string>
    <string name="wireless_network">Wireless Network</string>
    <string name="apps_manager">Application Settings</string>
    <string name="date_time">Date and Time</string>
    <string name="other_settings">Other Settings</string>
    <string name="system_info">System Information</string>
    <string name="boot_input">External Input at Boot</string>
    <string name="boot_apps">Startup Applications</string>
    <string name="power_mode">Power Mode</string>
    <string name="button_sound">Button Sound</string>
    <string name="screen_saver">Screen Saver</string>
    <string name="timer_off">Scheduled Power Off</string>
    <string name="reset_factory">Restore Factory Settings</string>
    <string name="project_mode">Installation Mode</string>
    <string name="digital_zoom">Digital Zoom</string>
    <string name="vertical_correct">Vertical Correction</string>
    <string name="horizontal_correct">Horizontal Correction</string>
    <string name="manual_keystone">Manual Keystone</string>
    <string name="reset_keystone">Reset Keystone Correction</string>
    <string name="wifi">WI-FI</string>
    <string name="wifi_switch">WI-FI Switch</string>
    <string name="apps_version">Application Version</string>
    <string name="app_size">Application Size</string>
    <string name="app_cache">Cache Data</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="uninstall">Uninstall</string>
    <string name="select_date">Select Date</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="correct_tips">When the center is a circle, the screen\'s aspect ratio is best.</string>
    <string name="select_point">Select Point</string>
    <string name="Menu_reset">Reset</string>
    <string name="correct">Correction</string>
    <string name="exit">Exit</string>
    <string name="app">APP</string>
    <string name="select_time">Select Time</string>
    <string name="hours">Hours</string>
    <string name="minute">Minutes</string>
    <string name="network_connect">Network Connection</string>
    <string name="network_connect_tips">Please enter the password for "%1$s"</string>
    <string name="connect">Connect</string>
    <string name="upgrade_check_fail_tips">Upgrade file not found, please check USB connection or update the file and try again.</string>
    <string name="upgrade_check_success_tips">Upgrade file detected, do you want to upgrade now?</string>
    <string name="retry">Retry</string>
    <string name="checking">Searching for files...</string>
    <string name="switch_wallpaper_tips">Switching wallpaper, please wait...</string>
    <string name="exit_speaker_mode">Exiting Bluetooth Speaker Mode</string>
    <string name="screen_off">Screen Off</string>
    <string name="power_off">Power Off</string>
    <string name="reboot">Reboot</string>
    <string name="bluetooth_speaker">Bluetooth Speaker</string>
    <string name="timer">Timer</string>
    <string name="second">%1$s seconds</string>
    <string name="auto_keystone">Auto Keystone Correction</string>
    <string name="auto_keystone_on">Please turn off auto keystone correction first</string>
    <string name="auto_four_corner_on">Please turn off auto four-corner correction first</string>
    <string name="power_mode_1">Standby Mode</string>
    <string name="power_mode_2">Shutdown Mode</string>
    <string name="boot_source_1">None</string>
    <string name="boot_source_2">HDMI</string>
    <string name="boot_source_3">AV</string>
    <string name="developer_mode">Developer Mode</string>
    <string name="developer_mode_on">Developer mode is on</string>
    <string name="developer_mode_off">Developer mode is off</string>
    <string name="off_screen">Press the "OK" button to turn off the screen</string>
    <string name="connect_status">Connection Status:</string>
    <string name="exit_tip">Tip: Press the "Back" key or "Home" key to exit screen off</string>
    <string name="device_name">Device Name</string>
    <string name="online_update">Online Upgrade</string>
    <string name="manual">Manual</string>
    <string name="local">Local</string>
    <string name="usb_dir">USB</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="auto_four_corner">Auto Four-Corner Correction</string>
    <string name="screen_recognition">Screen Recognition</string>
    <string name="intelligent_obstacle">Intelligent Obstacle Avoidance</string>
    <string name="calibration">Smart Calibration</string>
    <string name="shutdown_tips"><Data><![CDATA[<font color="#ff0000"><b>%1$d</b></font> seconds until automatic shutdown ]]></Data></string>
    <string name="connecting_ssid">Connecting to %1$s …</string>
    <string name="data_none">No corresponding application data found, please go to the app store to download</string>
    <string name="hotspot_settings">Hotspot Settings</string>
    <string name="wired_network">Wired Network</string>
    <string name="hotspot_switch">Hotspot Switch</string>
    <string name="one_band">2.4 GHz Band</string>
    <string name="two_band">5 GHz Band</string>
    <string name="passwordmsglength">Password must be at least 8 characters!</string>
    <string name="empty_string">Cannot be empty!</string>
    <string name="add_network">Add Network</string>
    <string name="refresh_network">Refresh Network</string>
    <string name="dhcp">DHCP</string>
    <string name="static_ip">Static</string>
    <string name="ip_settings">IP Settings</string>
    <string name="ip_mode">IP Mode</string>
    <string name="ip_address">IP Address</string>
    <string name="subnet_mask">Subnet Mask</string>
    <string name="gateway">Gateway</string>
    <string name="dns">DNS</string>
    <string name="dns2">DNS2</string>
    <string name="new_version">New Version</string>
    <string name="update_content">Update Content</string>
    <string name="best_version">Latest version already</string>
    <string name="size">Size:</string>
    <string name="check_update">Check for Updates</string>
    <string name="download_update">Download Update</string>
    <string name="donwloading">Downloading</string>
    <string name="cureent_version">Current Version</string>
</resources>