<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/x_550"
    android:layout_height="@dimen/y_300"
    xmlns:skin="http://schemas.android.com/android/skin"
    android:background="@drawable/white_frame"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/y_160"
        android:id="@+id/shutdown_tips"
        android:layout_marginTop="@dimen/y_30"
        android:layout_marginStart="@dimen/x_80"
        android:layout_marginEnd="@dimen/y_80"
        android:textColor="@color/black"
        android:textSize="@dimen/x_25"
        android:text="@string/shutdown_tips"
        android:gravity="center"
        />

    <TextView
        android:layout_width="@dimen/x_140"
        android:layout_height="@dimen/y_50"
        android:id="@+id/cancel"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/y_16"
        android:layout_marginStart="@dimen/x_100"
        android:gravity="center"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@drawable/button_bg"
        android:textColor="@color/white"
        android:text="@string/cancel"
        android:textSize="@dimen/x_25"
        android:ellipsize="marquee"
        android:singleLine="true"
        />

    <TextView
        android:layout_width="@dimen/x_140"
        android:layout_height="@dimen/y_50"
        android:id="@+id/enter"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="@dimen/y_16"
        android:layout_marginEnd="@dimen/x_100"
        android:gravity="center"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@drawable/button_bg"
        android:textColor="@color/white"
        android:text="@string/power_off"
        android:textSize="@dimen/x_25"
        android:ellipsize="marquee"
        android:singleLine="true"
        />

</RelativeLayout>