<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/x_550"
    android:layout_height="@dimen/y_300"
    android:background="@drawable/white_frame"
    >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/y_60"
            android:layout_marginStart="@dimen/x_80"
            android:layout_marginEnd="@dimen/y_80"
            android:textColor="@color/black"
            android:textSize="@dimen/x_21"
            android:text="@string/reset_keystore"
            android:gravity="center"
            />

        <TextView
            android:layout_width="@dimen/x_140"
            android:layout_height="@dimen/y_50"
            android:id="@+id/enter"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/y_16"
            android:layout_marginStart="@dimen/x_100"
            android:gravity="center"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:background="@drawable/button_bg"
            android:textColor="@color/white"
            android:text="@string/enter"
            android:textSize="@dimen/x_25"
            android:ellipsize="marquee"
            android:singleLine="true"
            />

        <TextView
            android:layout_width="@dimen/x_140"
            android:layout_height="@dimen/y_50"
            android:id="@+id/cancel"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="@dimen/y_16"
            android:layout_marginEnd="@dimen/x_100"
            android:gravity="center"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:background="@drawable/button_bg"
            android:textColor="@color/white"
            android:text="@string/cancel"
            android:textSize="@dimen/x_25"
            android:ellipsize="marquee"
            android:singleLine="true"
            />
</RelativeLayout>