<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/x_400"
    android:layout_height="match_parent"
    xmlns:skin="http://schemas.android.com/android/skin"
    android:background="@drawable/second_bg"
    android:paddingStart="@dimen/x_10"
    android:paddingEnd="@dimen/x_10"
    android:paddingTop="@dimen/y_15"
    skin:enable="true">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/settings_title"
        android:text="@string/online_update"
        android:textSize="@dimen/x_27"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/y_89"
        android:layout_marginStart="@dimen/x_15"
        android:visibility="gone"
        skin:enable="true"
        />
    <com.htc.luminaos.settings.widget.RL2Relativelayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y_64"
        android:id="@+id/rl_current_version"
        android:layout_below="@id/settings_title"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@drawable/settings_second_bg"
        skin:enable="true"
        >

        <TextView
            android:layout_width="@dimen/x_150"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/x_15"
            android:duplicateParentState="true"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:text="@string/cureent_version"
            android:textColor="@color/tv_bg"
            android:textSize="@dimen/x_21"
            skin:enable="true" />
        <TextView
            android:layout_width="@dimen/x_150"
            android:layout_height="wrap_content"
            android:id="@+id/current_version_tv"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:duplicateParentState="true"
            android:gravity="end"
            android:layout_marginEnd="@dimen/x_15"
            android:textSize="@dimen/x_16"
            android:textColor="@color/status_tv_bg"
            android:singleLine="true"
            android:ellipsize="marquee"
            skin:enable="true"
            />

    </com.htc.luminaos.settings.widget.RL2Relativelayout>

    <com.htc.luminaos.settings.widget.RL2Relativelayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y_64"
        android:id="@+id/rl_new_version"
        android:layout_below="@id/rl_current_version"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:visibility="gone"
        android:background="@drawable/settings_second_bg"
        skin:enable="true"
        >
        <TextView
            android:layout_width="@dimen/x_150"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/x_15"
            android:layout_centerVertical="true"
            android:text="@string/new_version"
            android:textSize="@dimen/x_21"
            android:duplicateParentState="true"
            android:textColor="@color/tv_bg"
            android:singleLine="true"
            android:ellipsize="marquee"
            skin:enable="true"
            />
        <TextView
            android:layout_width="@dimen/x_150"
            android:layout_height="wrap_content"
            android:id="@+id/new_version_tv"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:duplicateParentState="true"
            android:layout_marginEnd="@dimen/x_15"
            android:textSize="@dimen/x_16"
            android:textColor="@color/status_tv_bg"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:gravity="end"
            skin:enable="true"
            />
    </com.htc.luminaos.settings.widget.RL2Relativelayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rl_update_info"
        android:layout_below="@id/rl_new_version"
        android:visibility="gone"
        android:layout_marginTop="@dimen/y_15"
        android:layout_marginStart="@dimen/x_15"
        skin:enable="true"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/update_info_title"
            android:textColor="@color/black"
            android:textSize="@dimen/x_22"
            android:text="@string/update_content"
            skin:enable="true"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/update_info_tv"
            android:layout_below="@id/update_info_title"
            android:textColor="@color/black"
            android:textSize="@dimen/x_16"
            skin:enable="true"
            />
    </RelativeLayout>

    <TextView
        android:layout_width="@dimen/x_300"
        android:layout_height="wrap_content"
        android:id="@+id/best_version_tv"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/x_16"
        android:visibility="gone"
        android:text="@string/best_version"
        skin:enable="true"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rl_update_progress"
        android:layout_alignParentBottom="true"
        android:visibility="gone"
        android:layout_marginBottom="@dimen/y_160"
        android:layout_marginStart="@dimen/x_15"
        android:layout_marginEnd="@dimen/x_15"
        skin:enable="true"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/size_title"
            android:textColor="@color/black"
            android:textSize="@dimen/x_16"
            android:text="@string/size"
            skin:enable="true"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/size_tv"
            android:layout_toEndOf="@id/size_title"
            android:textColor="@color/black"
            android:textSize="@dimen/x_16"
            skin:enable="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/percent_tv"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/x_15"
            android:textColor="@color/black"
            android:textSize="@dimen/x_16"
            android:text="30%"
            skin:enable="true"
            />
        
        <ProgressBar
            android:layout_width="@dimen/x_350"
            android:layout_height="@dimen/y_32"
            android:id="@+id/progressbar"
            android:minHeight="@dimen/y_32"
            android:maxHeight="@dimen/y_32"
            android:layout_below="@id/size_title"
            android:layout_marginTop="@dimen/y_10"
            android:max="100"
            android:progress="50"
            android:visibility="gone"
            android:focusable="false"
            android:focusableInTouchMode="false"
            style="?android:attr/progressBarStyleHorizontal"
            android:progressDrawable="@drawable/progress_background"
            android:thumb="@android:color/transparent"
            skin:enable="true"
            />

    </RelativeLayout>

    <View
        android:layout_width="@dimen/x_350"
        android:layout_height="@dimen/y_1"
        android:id="@+id/line_10"
        android:layout_centerHorizontal="true"
        android:background="@color/line_color"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/y_130" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y_60"
        android:id="@+id/rl_check_version"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/y_45"
        android:visibility="gone"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@drawable/settings_second_bg"
        skin:enable="true"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/x_15"
            android:layout_centerVertical="true"
            android:text="@string/check_update"
            android:duplicateParentState="true"
            android:textSize="@dimen/x_21"
            android:textColor="@color/tv_bg"
            skin:enable="true"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y_60"
        android:id="@+id/rl_download"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/y_45"
        android:visibility="gone"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@drawable/settings_second_bg"
        skin:enable="true"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/x_15"
            android:layout_centerVertical="true"
            android:text="@string/download_update"
            android:duplicateParentState="true"
            android:textSize="@dimen/x_21"
            android:textColor="@color/tv_bg"
            skin:enable="true"
            />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/downing_tv"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/y_61"
        android:layout_marginStart="@dimen/x_15"
        android:visibility="gone"
        android:textSize="@dimen/x_21"
        android:textColor="@color/white"
        android:text="@string/donwloading"
        skin:enable="true"
        />
</RelativeLayout>