<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_custom"
    android:id="@+id/rl_main"
    tools:context=".activity.WifiActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="@dimen/x_40"
        android:text="@string/wifi"
        android:layout_marginStart="@dimen/x_100"
        android:layout_marginTop="@dimen/y_40"
        android:id="@+id/title"
        />

    <RelativeLayout
        android:layout_width="@dimen/x_1032"
        android:layout_height="@dimen/y_80"
        android:layout_below="@id/title"
        android:id="@+id/rl_wifi_switch"
        android:layout_marginStart="@dimen/x_100"
        android:layout_marginTop="@dimen/y_19"
        android:background="@drawable/main_settings_bg"
        style="@style/focusStyle"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/x_50"
            android:layout_centerVertical="true"
            android:textColor="@color/tv_color"
            android:textSize="@dimen/x_27"
            android:text="@string/wifi_switch"
            android:duplicateParentState="true"
            />

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="@dimen/x_98"
            android:layout_height="@dimen/y_60"
            android:id="@+id/wifi_switch"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/x_50"
            android:layout_centerVertical="true"
            android:checked="true"
            android:thumb="@drawable/switch_thumb"
            app:track="@drawable/switch_bg"
            app:switchMinWidth="@dimen/x_90"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="@dimen/x_1032"
        android:layout_height="@dimen/y_80"
        android:layout_below="@id/rl_wifi_switch"
        android:id="@+id/rl_add_network"
        android:layout_marginStart="@dimen/x_100"
        android:layout_marginTop="@dimen/y_10"
        android:background="@drawable/main_settings_bg"
        style="@style/focusStyle"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/x_50"
            android:layout_centerVertical="true"
            android:textColor="@color/tv_color"
            android:textSize="@dimen/x_27"
            android:text="@string/add_network"
            android:duplicateParentState="true"
            />
    </RelativeLayout>

    <View
        android:layout_width="@dimen/x_1032"
        android:layout_height="@dimen/y_6"
        android:id="@+id/line"
        android:layout_below="@id/rl_add_network"
        android:layout_marginStart="@dimen/x_100"
        android:layout_marginTop="@dimen/y_15"
        android:background="@drawable/corner_line"
        />

    <com.htc.luminaos.widget.FocusKeepRecyclerView
        android:layout_width="@dimen/x_1032"
        android:layout_height="wrap_content"
        android:id="@+id/wifi_rv"
        android:layout_below="@id/line"
        android:layout_marginTop="@dimen/y_15"
        android:layout_marginStart="@dimen/x_100"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        />
    
</RelativeLayout>